--- a/Myerp/Tpl/Chanpin/left_kongguan.html
+++ b/Myerp/Tpl/Chanpin/left_kongguan.html
@@ -2,13 +2,12 @@
 		#navtab_2 h3 { color:#0B578F}
 		#navtab_3 h3 { color:#999}
 		</style>
-  <div id="leftColumn" style="margin-top:0px; width:150px;">
+  <div id="leftColumn" style="margin-top:0px; width:160px;">
         <ul id="searchTabs" class="tablist tablist_2">
-          <li><a id="shownavtab_1" <php>if(!$status){</php>class="current"<php>}</php> href="<{:SITE_INDEX}>Chanpin/kongguan" onclick="shownavtab(1)">&nbsp;全部&nbsp;</a></li>
-          <li><a id="shownavtab_2" <php>if($status == '报名'){</php>class="current"<php>}</php> href="<{:SITE_INDEX}>Chanpin/kongguan/status/报名" onclick="shownavtab(2)">&nbsp;报名&nbsp;</a></li>
-          <li><a id="shownavtab_3" <php>if($status == '截止'){</php>class="current"<php>}</php> href="<{:SITE_INDEX}>Chanpin/kongguan/status/截止" onclick="shownavtab(3)">&nbsp;截止&nbsp;</a></li>
+          <li><a id="shownavtab_2" <php>if($bzd_status == '未报账'){</php>class="current"<php>}</php> href="<{:SITE_INDEX}>Chanpin/kongguan/bzd_status/未报账" onclick="shownavtab(1)">&nbsp;未报账&nbsp;</a></li>
+          <li><a id="shownavtab_3" <php>if($bzd_status == '已报账'){</php>class="current"<php>}</php> href="<{:SITE_INDEX}>Chanpin/kongguan/bzd_status/已报账" onclick="shownavtab(2)">&nbsp;已报账&nbsp;</a></li>
         </ul>
-        <div id="navtab_1" class="leftList" <php>if($status){</php>style="display:none;"<php>}</php>>
+        <div id="navtab_1" class="leftList" <php>if($bzd_status){</php>style="display:none;"<php>}</php>>
           <h3 style="border:none">产品分类</h3>
           <h3><span>国内/拼团</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/国内">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
@@ -36,58 +35,58 @@
           </ul>
         </div>
         
-        <div id="navtab_2" class="leftList" <php>if($status != '报名'){</php>style="display:none;"<php>}</php>>
+        <div id="navtab_2" class="leftList" <php>if($bzd_status != '未报账'){</php>style="display:none;"<php>}</php>>
           <h3 style="border:none">产品分类</h3>
-          <h3><span>国内/拼团</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/国内/status/报名">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国内/拼团</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/国内/bzd_status/未报账">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/近郊游/status/报名">&nbsp;<span>近郊游</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/长线游/status/报名">&nbsp;<span>长线游</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/国内/status/报名">&nbsp;<span>自由人</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/国内/status/报名">&nbsp;<span>包团</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/近郊游/bzd_status/未报账">&nbsp;<span>近郊游</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/长线游/bzd_status/未报账">&nbsp;<span>长线游</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/国内/bzd_status/未报账">&nbsp;<span>自由人</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/国内/bzd_status/未报账">&nbsp;<span>包团</span></a> </li>
           </ul>
-          <h3><span>境外</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/境外/status/报名">&nbsp;<span>全部</span></a></h3>
+          <h3><span>境外</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/境外/bzd_status/未报账">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/韩国/status/报名">&nbsp;<span>韩国</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/日本/status/报名">&nbsp;<span>日本</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/台湾/status/报名">&nbsp;<span>台湾</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/港澳/status/报名">&nbsp;<span>港澳</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/东南亚/status/报名">&nbsp;<span>东南亚</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/欧美岛/status/报名">&nbsp;<span>欧美岛</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/境外/status/报名">&nbsp;<span>自由人</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/境外/status/报名">&nbsp;<span>包团</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/韩国/bzd_status/未报账">&nbsp;<span>韩国</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/日本/bzd_status/未报账">&nbsp;<span>日本</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/台湾/bzd_status/未报账">&nbsp;<span>台湾</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/港澳/bzd_status/未报账">&nbsp;<span>港澳</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/东南亚/bzd_status/未报账">&nbsp;<span>东南亚</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/欧美岛/bzd_status/未报账">&nbsp;<span>欧美岛</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/境外/bzd_status/未报账">&nbsp;<span>自由人</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/境外/bzd_status/未报账">&nbsp;<span>包团</span></a> </li>
           </ul>
           <h3><span>散客（联合体提供）</span></h3>
           <ul id="ul_shortcuts">
             <php>foreach($bumenlist as $v){</php>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/departmentID/<{$v['systemID']}>/status/报名">&nbsp;<span>|---<{$v['title']}></span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/departmentID/<{$v['systemID']}>/bzd_status/未报账">&nbsp;<span>|---<{$v['title']}></span></a> </li>
             <php>}</php>
           </ul>
         </div>
         
-        <div id="navtab_3" class="leftList" <php>if($status != '截止'){</php>style="display:none;"<php>}</php>>
+        <div id="navtab_3" class="leftList" <php>if($bzd_status != '已报账'){</php>style="display:none;"<php>}</php>>
           <h3 style="border:none">产品分类</h3>
-          <h3><span>国内/拼团</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/国内/status/截止">&nbsp;<span>全部</span></a></h3>
+          <h3><span>国内/拼团</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/国内/bzd_status/已报账">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/近郊游/status/截止">&nbsp;<span>近郊游</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/长线游/status/截止">&nbsp;<span>长线游</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/国内/status/截止">&nbsp;<span>自由人</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/国内/status/截止">&nbsp;<span>包团</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/近郊游/bzd_status/已报账">&nbsp;<span>近郊游</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/长线游/bzd_status/已报账">&nbsp;<span>长线游</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/国内/bzd_status/已报账">&nbsp;<span>自由人</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/国内/bzd_status/已报账">&nbsp;<span>包团</span></a> </li>
           </ul>
-          <h3><span>境外</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/境外/status/截止">&nbsp;<span>全部</span></a></h3>
+          <h3><span>境外</span><a href="<{:SITE_INDEX}>Chanpin/kongguan/guojing_copy/境外/bzd_status/已报账">&nbsp;<span>全部</span></a></h3>
           <ul id="ul_shortcuts">
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/韩国/status/截止">&nbsp;<span>韩国</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/日本/status/截止">&nbsp;<span>日本</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/台湾/status/截止">&nbsp;<span>台湾</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/港澳/status/截止">&nbsp;<span>港澳</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/东南亚/status/截止">&nbsp;<span>东南亚</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/欧美岛/status/截止">&nbsp;<span>欧美岛</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/境外/status/截止">&nbsp;<span>自由人</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/境外/status/截止">&nbsp;<span>包团</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/韩国/bzd_status/已报账">&nbsp;<span>韩国</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/日本/bzd_status/已报账">&nbsp;<span>日本</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/台湾/bzd_status/已报账">&nbsp;<span>台湾</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/港澳/bzd_status/已报账">&nbsp;<span>港澳</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/东南亚/bzd_status/已报账">&nbsp;<span>东南亚</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/欧美岛/bzd_status/已报账">&nbsp;<span>欧美岛</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/自由人/guojing_copy/境外/bzd_status/已报账">&nbsp;<span>自由人</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/kind_copy/包团/guojing_copy/境外/bzd_status/已报账">&nbsp;<span>包团</span></a> </li>
           </ul>
           <h3><span>散客（联合体提供）</span></h3>
           <ul id="ul_shortcuts">
             <php>foreach($bumenlist as $v){</php>
-            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/departmentID/<{$v['systemID']}>/status/截止">&nbsp;<span>|---<{$v['title']}></span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan/departmentID/<{$v['systemID']}>/bzd_status/已报账">&nbsp;<span>|---<{$v['title']}></span></a> </li>
             <php>}</php>
           </ul>
         </div>
