--- a/Myerp/Tpl/Dijie/header_chanpin.html
+++ b/Myerp/Tpl/Dijie/header_chanpin.html
@@ -107,7 +107,7 @@ function shenhe_after(data,status){
       <php>}}else{</php>
       <input type="button" style="float:right" value="审核" name="button" onclick="alert('已批准成团！！！')" >
       <php>}if(A("Method")->checkshenheback($chanpinID,'地接')){</php>
-      <input type="button" style="float:right" value=" 成团回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$chanpinID}>,'地接');">
+      <input type="button" style="float:right" value=" 成团回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$chanpinID}>,'地接','Dijie');">
 	  <php>}</php>
   <php>}</php>
   
@@ -167,7 +167,7 @@ function shenhe_after(data,status){
       <php>if(count(explode('财务总监审核',$baozhang['shenhe_remark'])) > 1) $alterword = '财务总监审核已审核通过！！！';</php>
       <input type="button" style="float:right" value="审核" name="button" onclick="alert('<{$alterword}>')" >
       <php>}if(A("Method")->checkshenheback($baozhangID,'报账单')){</php>
-      <input type="button" style="float:right" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$baozhangID}>,'报账单');">
+      <input type="button" style="float:right" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$baozhangID}>,'报账单','Dijie');">
 	  <php>}</php>
   <php>}</php>
   <php>if('应收及应付' == $markpos){</php>
