--- a/Myerp/Tpl/Chanpin/header_kongguan.html
+++ b/Myerp/Tpl/Chanpin/header_kongguan.html
@@ -115,10 +115,13 @@
       <input type="button" style="float:right" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$baozhangID}>,'报账单');">
 	  <php>}</php>
       <label style="float:right; margin:2px 4px 0 0; font-size:12px"> | 审核流程：<strong><{$tem_cp['shenhe_remark']}></strong></label>
-      <label style="float:right; margin:2px 4px 0 0; font-size:12px">锁状态：<strong><{$tem_cp['islock']}></strong></label>
+      <label style="float:right; margin:2px 4px 0 0; font-size:12px">| 锁状态：<strong><{$tem_cp['islock']}></strong></label>
   <php>}</php>
   <php>if('应收及应付' == $markpos){</php>
   <input type="button" value=" 添加应收项目 " name="button" class="button primary" id="yingshuo_create">
   <input type="button" value=" +应付项目 " name="button" class="button primary" id="yingfu_create">
   <php>}</php>
+  
+      <label style="float:right; margin:2px 4px 0 0; font-size:12px"> | 发团人：<strong><{$zituan['user_name']}></strong></label>
+      <label style="float:right; margin:2px 4px 0 0; font-size:12px"> 发团部门：<strong><{$zituan['bumen_copy']}></strong></label>
 </div>
