--- a/Myerp/Tpl/Chanpin/danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/danxiangfuwu.html
@@ -4,13 +4,20 @@
 
 <div id="main">
 
-<php>if($actionmethod == 'Chanpin'){</php>
+<php>if($actionmethod == 'Chanpin' && !$actiontype){</php>
 <include file="Chanpin:left_kongguan" />
   <div id="content" style="margin-left:180px;">
 <php>}</php>
-<php>if($actionmethod == 'Dijie'){</php>
+<php>if($actionmethod == 'Dijie' && !$actiontype){</php>
   <div id="content" style="margin-left:5px; padding-left:0px; border-left:none">
 <php>}</php>
+<php>if($actiontype == 'Caiwu'){</php>
+<tp:includeCA file="Caiwu:left_fabu:'left_fabu','单项服务'" />
+  <div id="content" style="margin-left:180px;">
+<php>}</php>
+
+
+
     <div id="resultdiv" class="resultdiv"></div>
     <div id="resultdiv_2" class="resultdiv"></div>
     <include file="Index:search_danxiangfuwu" />
@@ -91,8 +98,9 @@
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
           <th scope="col" nowrap="nowrap"><div> 标题 </div></th>
           <th scope="col" nowrap="nowrap"><div> 类型 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 审核阶段 </div></th>
-          <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 创建人 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 审核阶段 </div></th>
+          <th scope="col" nowrap="nowrap" style="width:10%;"><div> 备注说明 </div></th>
           <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
@@ -103,9 +111,10 @@
             <td scope="row" align="left" valign="top"><{$i+1}></td>
             <td scope="row" align="left" valign="top"><{$vol['title']}></td>
             <td scope="row" align="left" valign="top"><{$vol['type']}></td>
+            <td scope="row" align="left" valign="top"><{$vol['user_name']}></td>
             <td scope="row" align="left" valign="top"><{$vol['shenhe_remark']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
-            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
+            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
               <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
@@ -117,9 +126,10 @@
         <tr height="20">
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
           <th scope="col" nowrap="nowrap" style="width:30%;"><div> 标题 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 审核阶段 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 人数 </div></th>
-          <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 创建人 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 审核阶段 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 人数 </div></th>
+          <th scope="col" nowrap="nowrap" style="width:10%;"><div> 备注说明 </div></th>
           <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
@@ -129,10 +139,11 @@
           <tr height="40" class="evenListRowS1">
             <td scope="row" align="left" valign="top"><{$i+1}></td>
             <td scope="row" align="left" valign="top"><{$vol['title']}></td>
+            <td scope="row" align="left" valign="top"><{$vol['user_name']}></td>
             <td scope="row" align="left" valign="top"><{$vol['shenhe_remark']}></td>
             <td scope="row" align="left" valign="top"><{$vol['renshu']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
-            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
+            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
               <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
@@ -144,10 +155,11 @@
         <tr height="20">
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
           <th scope="col" nowrap="nowrap" style="width:30%;"><div> 标题 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 审核阶段 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 人数 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 创建人 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 审核阶段 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 人数 </div></th>
           <th scope="col" nowrap="nowrap"><div> 航班号 </div></th>
-          <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap" style="width:10%;"><div> 备注说明 </div></th>
           <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
@@ -157,11 +169,12 @@
           <tr height="40" class="evenListRowS1">
             <td scope="row" align="left" valign="top"><{$i+1}></td>
             <td scope="row" align="left" valign="top"><{$vol['title']}></td>
+            <td scope="row" align="left" valign="top"><{$vol['user_name']}></td>
             <td scope="row" align="left" valign="top"><{$vol['shenhe_remark']}></td>
             <td scope="row" align="left" valign="top"><{$vol['renshu']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['hangbanhao']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
-            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
+            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
               <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
@@ -173,10 +186,11 @@
         <tr height="20">
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
           <th scope="col" nowrap="nowrap"><div> 标题 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 审核阶段 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 人数 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 创建人 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 审核阶段 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 人数 </div></th>
           <th scope="col" nowrap="nowrap"><div> 酒店名称 </div></th>
-          <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap" style="width:10%;"><div> 备注说明 </div></th>
           <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
@@ -186,11 +200,12 @@
           <tr height="40" class="evenListRowS1">
             <td scope="row" align="left" valign="top"><{$i+1}></td>
             <td scope="row" align="left" valign="top"><{$vol['title']}></td>
+            <td scope="row" align="left" valign="top"><{$vol['user_name']}></td>
             <td scope="row" align="left" valign="top"><{$vol['shenhe_remark']}></td>
             <td scope="row" align="left" valign="top"><{$vol['renshu']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['hotel']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
-            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
+            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
               <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
@@ -203,8 +218,9 @@
         <tr height="20">
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
           <th scope="col" nowrap="nowrap"><div> 标题 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 审核阶段 </div></th>
-          <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 创建人 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 审核阶段 </div></th>
+          <th scope="col" nowrap="nowrap" style="width:10%;"><div> 备注说明 </div></th>
           <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
@@ -214,9 +230,10 @@
           <tr height="40" class="evenListRowS1">
             <td scope="row" align="left" valign="top"><{$i+1}></td>
             <td scope="row" align="left" valign="top"><{$vol['title']}></td>
+            <td scope="row" align="left" valign="top"><{$vol['user_name']}></td>
             <td scope="row" align="left" valign="top"><{$vol['shenhe_remark']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
-            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
+            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
               <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
@@ -249,7 +266,7 @@
 <tp:includeCA file="Index:footer" />
 <script>
 function dosearch(str){
-		window.location = SITE_INDEX+'Chanpin/danxiangfuwu'+str;
+		window.location = SITE_INDEX+'<{$actionmethod}>/danxiangfuwu'+str;
 }
 
 function showinfo(baozhangID){
@@ -258,6 +275,9 @@ function showinfo(baozhangID){
 <php>}</php>
 <php>if($actionmethod == 'Dijie'){</php>
 	window.open('<{:SITE_INDEX}><{$actionmethod}>/djtuanbaozhang/baozhangID/'+baozhangID);
+<php>}</php>
+<php>if($actionmethod == 'Caiwu'){</php>
+	window.open('<{:SITE_INDEX}><{$actionmethod}>/tuanbaozhang/baozhangID/'+baozhangID);
 <php>}</php>
 
 	
@@ -834,6 +854,8 @@ function save_after(data,status){
 
 
 function deletebaozhang(baozhangID){
+	scroll(0,0);
+	ThinkAjax.myloading('resultdiv');
 	jQuery.ajax({
 		type:	"POST",
 		url:	'<{:SITE_INDEX}><{$actionmethod}>/deleteBaozhang/chanpinID/'+baozhangID,
