--- a/Myerp/Tpl/Chanpin/header_kongguan.html
+++ b/Myerp/Tpl/Chanpin/header_kongguan.html
@@ -122,6 +122,6 @@
   <input type="button" value=" +应付项目 " name="button" class="button primary" id="yingfu_create">
   <php>}</php>
   
-      <label style="float:right; margin:2px 4px 0 0; font-size:12px"> | 发团人：<strong><{$zituan['user_name']}></strong></label>
-      <label style="float:right; margin:2px 4px 0 0; font-size:12px"> 发团部门：<strong><{$zituan['bumen_copy']}></strong></label>
+      <label style="float:right; margin:2px 4px 0 0; font-size:12px"> | 发团人：<strong><PHP>if($baozhang['user_name']) echo $baozhang['user_name']; else echo $zituan['user_name'];</PHP></strong></label>
+      <label style="float:right; margin:2px 4px 0 0; font-size:12px"> 发团部门：<strong><PHP>if($baozhang['bumen_copy']) echo $baozhang['bumen_copy']; else echo $zituan['bumen_copy'];</PHP></strong></label>
 </div>
