--- a/Myerp/Tpl/Dijie/header_chanpin.html
+++ b/Myerp/Tpl/Dijie/header_chanpin.html
@@ -175,6 +175,6 @@ function shenhe_after(data,status){
   <input type="button" value=" +应付项目 " name="button" class="button primary" id="yingfu_create">
   <php>}</php>
   
-      <label style="float:right; margin:2px 4px 0 0; font-size:12px"> | 发团人：<strong><{$djtuan['user_name']}></strong></label>
-      <label style="float:right; margin:2px 4px 0 0; font-size:12px"> 发团部门：<strong><{$djtuan['bumen_copy']}></strong></label>
+      <label style="float:right; margin:2px 4px 0 0; font-size:12px"> | 发团人：<strong><PHP>if($baozhang['user_name']) echo $baozhang['user_name']; else echo $djtuan['user_name'];</PHP></strong></label>
+      <label style="float:right; margin:2px 4px 0 0; font-size:12px"> 发团部门：<strong><PHP>if($baozhang['bumen_copy']) echo $baozhang['bumen_copy']; else echo $djtuan['bumen_copy'];</PHP></strong></label>
 </div>
