Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/login.html
+++ b/Myerp/Tpl/Index/login.html
@@ -39,7 +39,11 @@
 										<td width="1%" scope="row"></td>
 										<td scope="row"><span class="error" id="post_error"></span></td>
 									</tr>
-																	<tr>
+										<td width="100%" style="font-size: 12px; padding-bottom: 5px; font-weight: normal;" colspan="2" scope="row">
+                                        <strong style="color:red">请使用google或360急速浏览器登录！！！</strong>
+										</td>
+									</tr>
+									</tr>
 										<td width="100%" style="font-size: 12px; padding-bottom: 5px; font-weight: normal;" colspan="2" scope="row">请输入用户名和密码。
 										</td>
 									</tr>
