--- a/Myerp/Tpl/Index/login.html
+++ b/Myerp/Tpl/Index/login.html
@@ -40,7 +40,7 @@
 										<td scope="row"><span class="error" id="post_error"></span></td>
 									</tr>
 										<td width="100%" style="font-size: 12px; padding-bottom: 5px; font-weight: normal;" colspan="2" scope="row">
-                                        <strong style="color:red">请使用google或360急速浏览器登录！！！</strong>
+                                        <strong style="color:red">请使用google或360极速浏览器登录！！！</strong>
 										</td>
 									</tr>
 									</tr>
