--- a/Myerp/Tpl/Chanpin/left_kongguan.html
+++ b/Myerp/Tpl/Chanpin/left_kongguan.html
@@ -2,6 +2,7 @@
 		#navtab_2 h3 { color:#0B578F}
 		#navtab_3 h3 { color:#999}
 		</style>
+<php>if(!$pagetype){</php>
   <div id="leftColumn" style="margin-top:0px; width:160px;">
         <ul id="searchTabs" class="tablist tablist_2">
           <li><a id="shownavtab_2" <php>if($bzd_status == '未报账'){</php>class="current"<php>}</php> href="<{:SITE_INDEX}>Chanpin/kongguan/bzd_status/未报账" onclick="shownavtab(2)">&nbsp;未报账&nbsp;</a></li>
@@ -161,4 +162,50 @@ function shownavtab(s)
 
 
 </script>
+<php>}</php>
+
+
+<php>if($pagetype == '营收'){</php>
+  <div id="leftColumn" style="margin-top:7px; width:160px;">
+        <div id="navtab_1" class="leftList">
+          <h3><span>组团部门</span></h3>
+          <ul id="ul_shortcuts">
+            <php>foreach($zutuanlist as $v){ if($v['title'] == '国内部-组团')continue;</php>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/tongji/departmentID/<{$v['systemID']}>">&nbsp;<span><{$v['title']}></span></a> </li>
+            <php>}</php>
+            <php>foreach($zutuanlist as $v){ if($v['title'] != '国内部-组团')continue;</php>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/tongji/departmentID/<{$v['systemID']}>">&nbsp;<span><{$v['title']}></span></a> </li>
+            <php>}</php>
+          </ul>
+          <h3><span>地接部门</span></h3>
+          <ul id="ul_shortcuts">
+            <php>foreach($dijielist as $v){</php>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/tongji/departmentID/<{$v['systemID']}>">&nbsp;<span><{$v['title']}></span></a> </li>
+            <php>}</php>
+          </ul>
+          <h3><span>散客（联合体提供）</span></h3>
+          <ul id="ul_shortcuts">
+            <php>foreach($bumenlist as $v){</php>
+            <li> <a href="<{:SITE_INDEX}>Chanpin/tongji/departmentID/<{$v['systemID']}>">&nbsp;<span>|---<{$v['title']}></span></a> </li>
+            <php>}</php>
+          </ul>
+        </div>
+  </div>
+<php>}</php>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
