--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -147,7 +147,12 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
 <!--      <li> <a href="<{:SITE_INDEX}>Caiwu/zituanlist/dotype/产品搜索">组团产品</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/djtuanlist">地接产品</a> </li>
 -->      
-      <li> <a href="<{:SITE_INDEX}>Caiwu/tuansearch">组团地接产品</a> </li>
+      <li class="subTabMore"> <a href="<{:SITE_INDEX}>Caiwu/tuansearch">组团地接产品>></a> 
+        <ul class="cssmenu">
+          <li> <a href="<{:SITE_INDEX}>Caiwu/zituanlist/dotype/产品搜索">组团产品 </a> </li>
+          <li> <a href="<{:SITE_INDEX}>Caiwu/djtuanlist">地接产品 </a> </li>
+        </ul>
+      </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/danxiangfuwu">单项服务</a> </li>
       
       <li> <a href="<{:SITE_INDEX}>Caiwu/jixiao_tongji/type/员工">统计(绩效)</a> </li>
