--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -30,7 +30,8 @@ function dosetprint(ele,id)
 
 function doprint(type){
 	var url = SITE_INDEX+'<{$actionmethod}>/zituanbaozhang/doprint/'+type+'/chanpinID/<{$chanpinID}>/baozhangID/<{$baozhangID}>';
-    window.open(url,null,"height=500,width=1000,status=yes,toolbar=no,menubar=no,location=no");
+    //window.open(url,'_blank',"height=500,width=1000,status=yes,toolbar=no,menubar=no,location=no");
+    window.open(url,'_blank');
 }
 
 function exports(type)
