--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -53,7 +53,7 @@
         <td width="20%">&nbsp;接团单位：<{$baozhang['datatext']['jietuandanwei']}></td>
         <td width="20%">&nbsp;部门：<{$zituan['bumen_copy']}></td>
         <td width="10%">&nbsp;天数：<{$baozhang['tianshu']}></td>
-        <td width="10%">&nbsp;人数：<{$baozhang['renshu']}></td>
+        <td width="10%">&nbsp;人数：<{$baozhang_1['renshu']}></td>
       </tr>
       <tr height="28px" >
         <td width="25%">&nbsp;线路：<{$zituan['title_copy']}></td>
