--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -50,9 +50,9 @@
     
       <tr height="28px" >
         <td width="25%">&nbsp;团号：<{$zituan['tuanhao']}></td>
-        <td width="20%">&nbsp;接团单位：<{$baozhang['datatext']['jietuandanwei']}></td>
+        <td width="20%">&nbsp;接团单位：<{$baozhang_1['jietuandanwei']}></td>
         <td width="20%">&nbsp;部门：<{$zituan['bumen_copy']}></td>
-        <td width="10%">&nbsp;天数：<{$baozhang['tianshu']}></td>
+        <td width="10%">&nbsp;天数：<{$baozhang_1['tianshu']}></td>
         <td width="10%">&nbsp;人数：<{$baozhang_1['renshu']}></td>
       </tr>
       <tr height="28px" >
@@ -60,7 +60,7 @@
         <td width="20%">&nbsp;出团日期：<{$zituan['chutuanriqi']}></td>
         <td width="20%">&nbsp;回团日期：<php>echo jisuanriqi($zituan['chutuanriqi'],$zituan['xianlulist']['tianshu']);</php></td>
         <td width="10%">&nbsp;计调：<{$zituan['user_name']}></td>
-        <td width="10%">&nbsp;全陪：<{$baozhang['datatext']['quanpei']}></td>
+        <td width="10%">&nbsp;全陪：<{$baozhang_1['quanpei']}></td>
       </tr>
     <php>}</php>
       
@@ -70,7 +70,7 @@
         <td width="20%">&nbsp;发团社：<{$djtuan['fromcompany']}></td>
         <td width="20%">&nbsp;联系人：<{$djtuan['lianxiren']}></td>
         <td width="15%">&nbsp;电话：<{$djtuan['lianxirentelnum']}></td>
-        <td width="10%">&nbsp;人数：<{$baozhang['renshu']}></td>
+        <td width="10%">&nbsp;人数：<{$baozhang_1['renshu']}></td>
       </tr>
       <tr height="28px" >
         <td>&nbsp;线路：<{$djtuan['title']}></td>
