--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -50,9 +50,9 @@
     
       <tr height="28px" >
         <td width="25%">&nbsp;团号：<{$zituan['tuanhao']}></td>
-        <td width="20%">&nbsp;接团单位：<{$baozhang_1['jietuandanwei']}></td>
+        <td width="20%">&nbsp;接团单位：<{$baozhang_1['datatext']['jietuandanwei']}></td>
         <td width="20%">&nbsp;部门：<{$zituan['bumen_copy']}></td>
-        <td width="10%">&nbsp;天数：<{$baozhang_1['tianshu']}></td>
+        <td width="10%">&nbsp;天数：<{$zituan['xianlulist']['tianshu']}></td>
         <td width="10%">&nbsp;人数：<{$baozhang_1['renshu']}></td>
       </tr>
       <tr height="28px" >
