Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -130,7 +130,7 @@ function shenhehistory(chanpinID,obj){
           <td valign="top" scope="row" style="min-width:100px; width:100px;"> 报账人数（数字）: </td>
           <td valign="top" scope="row" style="min-width:100px;"><input name="renshu" type="text" value="<php>echo trim($baozhang['renshu'])</php>" check="^\S+$" warning="人数不能为空,且不能含有空格"></td>
           <td valign="top" scope="row" style="min-width:100px; width:100px;"> 接团单位: </td>
-          <td valign="top" scope="row" style="min-width:100px;"><input name="jietuandanwei" type="text" value="<php>echo trim($baozhang['datatext']['jietuandanwei'])</php>" check="^\S+$" warning="接团单位不能为空,且不能含有空格"></td>
+          <td valign="top" scope="row" style="min-width:100px;"><input name="jietuandanwei" type="text" value="<php>echo trim($baozhang['datatext']['jietuandanwei'])</php>"></td>
           <td valign="top" scope="row" style="min-width:100px; width:100px;"> 签约人: </td>
           <td valign="top" scope="row" style="min-width:100px;"><input name="qianyueren" type="text" value="<php>echo trim($baozhang['datatext']['qianyueren'])</php>"></td>
         </tr>
@@ -151,7 +151,7 @@ function shenhehistory(chanpinID,obj){
           <td valign="top" scope="row" style="min-width:100px; width:100px;"> 报账人数（数字）: </td>
           <td valign="top" scope="row" style="min-width:100px;"><input name="renshu" type="text" value="<php>echo trim($baozhang['renshu'])</php>" check="^\S+$" warning="人数不能为空,且不能含有空格"></td>
           <td valign="top" scope="row" style="min-width:100px; width:100px;"> 接团单位: </td>
-          <td valign="top" scope="row" style="min-width:100px;"><input name="jietuandanwei" type="text" value="<php>echo trim($baozhang['datatext']['jietuandanwei'])</php>" check="^\S+$" warning="接团单位不能为空,且不能含有空格"></td>
+          <td valign="top" scope="row" style="min-width:100px;"><input name="jietuandanwei" type="text" value="<php>echo trim($baozhang['datatext']['jietuandanwei'])</php>"></td>
           <td valign="top" scope="row" style="min-width:100px; width:100px;"> 签约人: </td>
           <td valign="top" scope="row" style="min-width:100px;"><input name="qianyueren" type="text" value="<php>echo trim($baozhang['datatext']['qianyueren'])</php>"></td>
         </tr>
