--- a/Myerp/Tpl/Chanpin/kongguan.html
+++ b/Myerp/Tpl/Chanpin/kongguan.html
@@ -136,8 +136,8 @@
 <tp:includeCA file="Index:footer" />
 <script language="javascript"> 
 function dosearch(str){
-		//window.location = SITE_INDEX+'<{$_SERVER[REQUEST_URI]}>/kongguan'+str;
-		window.location = '<{$_SERVER[REQUEST_URI]}>/kongguan'+str;
+		//window.location = SITE_INDEX+'/kongguan'+str;
+		window.location = '<{$_SERVER[REQUEST_URI]}>/'+str;
 }
 </script>
 <div id="selectitem" style=" display:none; position:absolute;">
