--- a/Myerp/Tpl/Chanpin/kongguan.html
+++ b/Myerp/Tpl/Chanpin/kongguan.html
@@ -137,7 +137,7 @@
 <script language="javascript"> 
 function dosearch(str){
 		//window.location = SITE_INDEX+'/kongguan'+str;
-		window.location = '<{$_SERVER[REQUEST_URI]}>/'+str;
+		window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
 }
 </script>
 <div id="selectitem" style=" display:none; position:absolute;">
