Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/kongguan.html
+++ b/Myerp/Tpl/Chanpin/kongguan.html
@@ -142,8 +142,8 @@
 <tp:includeCA file="Index:footer" />
 <script language="javascript"> 
 function dosearch(str){
-		//window.location = SITE_INDEX+'/kongguan'+str;
-		window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
+		window.location = SITE_INDEX+'/kongguan'+str;
+		//window.location = '<{$_SERVER[REQUEST_URI]}>'+str;
 }
 </script>
 <div id="selectitem" style=" display:none; position:absolute;">
