--- a/Myerp/Tpl/Index/search_zituan.html
+++ b/Myerp/Tpl/Index/search_zituan.html
@@ -25,6 +25,7 @@
         
         <div class="search_form" id="searchdiv_1" style="<PHP>if($sorttabid != 1 && $sorttabid){</PHP>display:none; <PHP>}</PHP>margin-bottom:0px;">
               <div class="edit view search ">
+              <input type="hidden" class="departmentID" value="<{$departmentID}>" />
                     <table width="100%" cellspacing="0" cellpadding="0" border="0">
                       <tbody>
                         <tr>
@@ -72,8 +73,18 @@
                             <option value="截止">截止</option> 
                         </select>
                           </td>
-                          <td scope="row" nowrap="nowrap"> 产品分类（日本，韩国等） </td>
-                          <td nowrap="nowrap"><input type="text" class="kind_copy" value="<{$kind_copy}>"/></td>
+                          <td scope="row" nowrap="nowrap"> 报账状态 </td>
+                          <td nowrap="nowrap">
+                        <select class="bzd_status"> 
+                            <php> if($bzd_status){</php>
+                            <option value="<{$bzd_status}>"><{$bzd_status}></option>
+                            <option disabled="disabled">-----------------</option>
+                            <php> }</php>
+                            <option value="">全部</option> 
+                            <option value="未报账">未报账</option> 
+                            <option value="已报账">已报账</option> 
+                        </select>
+                          </td>
                         </tr>
                       </tbody>
                     </table>
@@ -161,6 +172,7 @@ function clearsearch(){
 		jQuery('.tuanhao_2').val('');
 		jQuery('.kind_copy').val('');
 		jQuery('.chutuanriqi').val('');
+		jQuery('.bzd_status').val('');
 }
 
 function _dosearch(sorttabid){
@@ -179,12 +191,16 @@ function _dosearch(sorttabid){
 	str += '/user_name/'+jQuery('.user_name').val();
 	if(jQuery('.status').val())
 	str += '/status/'+jQuery('.status').val();
+	if(jQuery('.bzd_status').val())
+	str += '/bzd_status/'+jQuery('.bzd_status').val();
 //	if(jQuery('.tuanhao').val())
 //	str += '/tuanhao/'+jQuery('.tuanhao').val();
 	if(jQuery('.kind_copy').val())
 	str += '/kind_copy/'+jQuery('.kind_copy').val();
 	if(jQuery('.chutuanriqi').val())
-	str += '/chutuanriqi/'+jQuery('.chutuanriqi').val();
+	if(jQuery('.departmentID').val())
+	str += '/departmentID/'+jQuery('.departmentID').val();
+	
 	str += '/sorttabid/'+sorttabid;
 	dosearch(str);
 }
