Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/search_zituan.html
+++ b/Myerp/Tpl/Index/search_zituan.html
@@ -193,9 +193,12 @@ function _dosearch(sorttabid){
 	str += '/status/'+jQuery('.status').val();
 	if(jQuery('.bzd_status').val())
 	str += '/bzd_status/'+jQuery('.bzd_status').val();
+//	if(jQuery('.tuanhao').val())
+//	str += '/tuanhao/'+jQuery('.tuanhao').val();
 	if(jQuery('.kind_copy').val())
 	str += '/kind_copy/'+jQuery('.kind_copy').val();
 	if(jQuery('.chutuanriqi').val())
+	str += '/chutuanriqi/'+jQuery('.chutuanriqi').val();
 	if(jQuery('.departmentID').val())
 	str += '/departmentID/'+jQuery('.departmentID').val();
 	
